dropdown menu looks good must fix spacing between elements

--- a/client/src/components/boardTaskBar/dropdown.css
+++ b/client/src/components/boardTaskBar/dropdown.css
@@ -1,21 +1,27 @@
+:root {
+    --bg: #242526;
+    --bg-accent: #484a4d;
+    --text-color: #dadce1;
+    --nav-size: 60px;
+    --border: 1px solid #474a4d;
+    --border-radius: 8px;
+    --speed: 500ms;
+}
+
 ul {
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
-.navbar-board {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 5px 0;
-    border-bottom: 1px solid white;
-    margin-bottom: 10px;
-    width: 100%;
-    height: 60px;
+a {
+    text-decoration: none;
+}
 
+.navbar-board {
+
+    height: var(--nav-size);
+    padding: 0 1rem;
 }
 
 .navbar-nav {
@@ -28,15 +34,14 @@ ul {
 }
 
 .nav-item {
-    width: calc(60px*0.8);
+    width: calc(var(--nav-size) * 0.8);
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .icon-button {
-    --button-size: calc(60px*0.555);
-    width: var(--button-size);
+    --button-size: calc(var(--nav-size) * 0.5);
     height: var(--button-size);
     background-color: #484a4d;
     color: #dadce1;
@@ -57,6 +62,42 @@ ul {
     fill: #dadce1;
     width: 20px;
     height: 20px;
+}
+
+
+.dropdown {
+    position: absolute;
+    top: 150px;
+    width: 300px;
+    transform: translateX(-45%);
+    background-color: var(--bg);
+    border: var(--border);
+    border-radius: var(--border-radius);
+    padding: 1rem;
+    overflow: hidden;
+
+}
+
+.menu {
+    width: 100%;
+}
+
+.menu-item {
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: var(--border-radius);
+    transition: background var(--speed);
+    padding: 0.5rem;
+}
+
+.menu-item:hover {
+    background-color: #525357;
+}
+
+.icon-right {
+    margin-left: auto;
 }
 
 .button-column {
